--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         url: "https://cristianloa.github.io/chat/",
         icon: "fa-comment-dots",
         description: "Una aplicación de chat en tiempo real con interfaz moderna y funcionalidad de mensajería instantánea.",
-        screenshot: "https://via.placeholder.com/300x200?text=Chat+Screenshot" // Placeholder
+        screenshot: "https://cristianloa.github.io/chat/chatme-cristianloa.jpge" // Placeholder
       }
       // Añade más proyectos aquí, por ejemplo:
       // {
